Update open api generated classes #40
