# applications/pub-chem-index/backend/pub_chem_index/controllers/molecule_controller.py
@@ -3,10 +3,43 @@ import os
 import csv
 import time
 import traceback
-
 from pub_chem_index.models.molecule import Molecule  # noqa: E501
+from pub_chem_index.models.molecule_inchi import MoleculeInchi  # noqa: E501
 from pub_chem_index import util
 from pub_chem_index.services import lookup
+
+
+def get_inchi():  # noqa: E501
+    """List All Molecules
+
+    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
+
+
+    :rtype: List[MoleculeInchi]
+    """
+    return lookup.get_all_values('cid_inchi_key')
+
+
+def get_mesh():  # noqa: E501
+    """List All Molecules
+
+    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
+
+
+    :rtype: List[Molecule]
+    """
+    return lookup.get_all_values('cid_mesh')
+
+
+def get_smiles():  # noqa: E501
+    """List All Smiles
+
+    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
+
+
+    :rtype: List[Molecule]
+    """
+    return lookup.get_all_values('cid_smiles')
 
 
 def get_synonyms():  # noqa: E501
@@ -19,21 +52,8 @@ def get_synonyms():  # noqa: E501
     """
     return lookup.get_all_values('cid_synonym_filtered')
 
-def search_synonyms(term):  # noqa: E501
-    """Get a Molecule
 
-    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
-
-    :param term: A unique identifier for a &#x60;Molecule&#x60;.
-    :type term: str
-
-    :rtype: List[Molecule]
-    """
-    if term.isnumeric():
-        return lookup.search_table_by_cid('cid_synonym_filtered', term)
-    return lookup.search_table_by_value('cid_synonym_filtered', 'Synonym' ,term)
-
-def get_smiles():  # noqa: E501
+def get_title():  # noqa: E501
     """List All Molecules
 
     Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
@@ -41,45 +61,8 @@ def get_smiles():  # noqa: E501
 
     :rtype: List[Molecule]
     """
-    return lookup.get_all_values('cid_smiles')
+    return lookup.get_all_values('cid_title')
 
-def search_smiles(term):  # noqa: E501
-    """Get a Molecule
-
-    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
-
-    :param term: A unique identifier for a &#x60;Molecule&#x60;.
-    :type term: str
-
-    :rtype: List[Molecule]
-    """
-    if term.isnumeric():
-        return lookup.search_table_by_cid('cid_smiles', term)
-    return lookup.search_table_by_value('cid_smiles', 'mid' ,term)
-
-def get_inchi():  # noqa: E501
-    """List All Molecules
-
-    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
-
-
-    :rtype: List[Molecule]
-    """
-    return lookup.get_all_values('cid_inchi_key')
-
-def search_inchi(term):  # noqa: E501
-    """Get a Molecule
-
-    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
-
-    :param term: A unique identifier for a &#x60;Molecule&#x60;.
-    :type term: str
-
-    :rtype: List[Molecule]
-    """
-    if term.isnumeric():
-        return lookup.search_table_by_cid('cid_inchi_key', term)
-    return lookup.search_table_by_value('cid_inchi_key', 'inchi' ,term)
 
 def get_uipac():  # noqa: E501
     """List All Molecules
@@ -91,7 +74,8 @@ def get_uipac():  # noqa: E501
     """
     return lookup.get_all_values('cid_uipac')
 
-def search_uipac(term):  # noqa: E501
+
+def search_inchi(term):  # noqa: E501
     """Get a Molecule
 
     Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
@@ -99,21 +83,13 @@ def search_uipac(term):  # noqa: E501
     :param term: A unique identifier for a &#x60;Molecule&#x60;.
     :type term: str
 
-    :rtype: List[Molecule]
+    :rtype: List[MoleculeInchi]
     """
     if term.isnumeric():
-        return lookup.search_table_by_cid('cid_uipac', term)
-    return lookup.search_table_by_value('cid_uipac', 'uipac' ,term)
-
-def get_mesh():  # noqa: E501
-    """List All Molecules
-
-    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
+        return lookup.search_table_by_cid('cid_inchi_key', term)
+    return lookup.search_table_by_value('cid_inchi_key', 'inchi' ,term)
 
 
-    :rtype: List[Molecule]
-    """
-    return lookup.get_all_values('cid_mesh')
 
 def search_mesh(term):  # noqa: E501
     """Get a Molecule
@@ -129,15 +105,38 @@ def search_mesh(term):  # noqa: E501
         return lookup.search_table_by_cid('cid_mesh', term)
     return lookup.search_table_by_value('cid_mesh', 'mesh' ,term)
 
-def get_title():  # noqa: E501
-    """List All Molecules
 
-    Gets a list of all &#x60;Molecule&#x60; entities. # noqa: E501
 
+def search_smiles(term):  # noqa: E501
+    """Get a Molecule
+
+    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
+
+    :param term: A unique identifier for a &#x60;Molecule&#x60;.
+    :type term: str
 
     :rtype: List[Molecule]
     """
-    return lookup.get_all_values('cid_title')
+    if term.isnumeric():
+        return lookup.search_table_by_cid('cid_smiles', term)
+    return lookup.search_table_by_value('cid_smiles', 'mid' ,term)
+
+
+
+def search_synonyms(term):  # noqa: E501
+    """Get a Molecule
+
+    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
+
+    :param term: A unique identifier for a &#x60;Molecule&#x60;.
+    :type term: str
+
+    :rtype: List[Molecule]
+    """
+    if term.isnumeric():
+        return lookup.search_table_by_cid('cid_synonym_filtered', term)
+    return lookup.search_table_by_value('cid_synonym_filtered', 'Synonym' ,term)
+
 
 def search_title(term):  # noqa: E501
     """Get a Molecule
@@ -152,3 +151,18 @@ def search_title(term):  # noqa: E501
     if term.isnumeric():
         return lookup.search_table_by_cid('cid_title', term)
     return lookup.search_table_by_value('cid_title', 'title' ,term)
+
+
+def search_uipac(term):  # noqa: E501
+    """Get a Molecule
+
+    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
+
+    :param term: A unique identifier for a &#x60;Molecule&#x60;.
+    :type term: str
+
+    :rtype: List[Molecule]
+    """
+    if term.isnumeric():
+        return lookup.search_table_by_cid('cid_uipac', term)
+    return lookup.search_table_by_value('cid_uipac', 'uipac' ,term)
