# applications/pub-chem-index/backend/pub_chem_index/models/molecule_inchi.py
@@ -1,0 +1,120 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from pub_chem_index.models.base_model_ import Model
+from pub_chem_index import util
+
+
+class MoleculeInchi(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, cid=None, inchi=None, key=None):  # noqa: E501
+        """MoleculeInchi - a model defined in OpenAPI
+
+        :param cid: The cid of this MoleculeInchi.  # noqa: E501
+        :type cid: int
+        :param inchi: The inchi of this MoleculeInchi.  # noqa: E501
+        :type inchi: str
+        :param key: The key of this MoleculeInchi.  # noqa: E501
+        :type key: str
+        """
+        self.openapi_types = {
+            'cid': int,
+            'inchi': str,
+            'key': str
+        }
+
+        self.attribute_map = {
+            'cid': 'cid',
+            'inchi': 'inchi',
+            'key': 'key'
+        }
+
+        self._cid = cid
+        self._inchi = inchi
+        self._key = key
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MoleculeInchi':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Molecule_Inchi of this MoleculeInchi.  # noqa: E501
+        :rtype: MoleculeInchi
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def cid(self):
+        """Gets the cid of this MoleculeInchi.
+
+
+        :return: The cid of this MoleculeInchi.
+        :rtype: int
+        """
+        return self._cid
+
+    @cid.setter
+    def cid(self, cid):
+        """Sets the cid of this MoleculeInchi.
+
+
+        :param cid: The cid of this MoleculeInchi.
+        :type cid: int
+        """
+
+        self._cid = cid
+
+    @property
+    def inchi(self):
+        """Gets the inchi of this MoleculeInchi.
+
+        List of synonyms matching search query  # noqa: E501
+
+        :return: The inchi of this MoleculeInchi.
+        :rtype: str
+        """
+        return self._inchi
+
+    @inchi.setter
+    def inchi(self, inchi):
+        """Sets the inchi of this MoleculeInchi.
+
+        List of synonyms matching search query  # noqa: E501
+
+        :param inchi: The inchi of this MoleculeInchi.
+        :type inchi: str
+        """
+
+        self._inchi = inchi
+
+    @property
+    def key(self):
+        """Gets the key of this MoleculeInchi.
+
+        List of synonyms matching search query  # noqa: E501
+
+        :return: The key of this MoleculeInchi.
+        :rtype: str
+        """
+        return self._key
+
+    @key.setter
+    def key(self, key):
+        """Sets the key of this MoleculeInchi.
+
+        List of synonyms matching search query  # noqa: E501
+
+        :param key: The key of this MoleculeInchi.
+        :type key: str
+        """
+
+        self._key = key
